smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-missing-trait-value.smithy
// Syntax error at line 5, column 1: Expected one of AT('@'), LBRACE('{'); but found IDENTIFIER('string') | Model
namespace com.foo

apply SomeShape // comment so spaces aren't eaten
string MyString
